--- a/src/DataBase/db.properties
+++ b/src/DataBase/db.properties
@@ -1,4 +1,4 @@
-userName = KX
-password = Pizda999
+userName = sa
+password = 123456
 port = 1433
-databaseName = CanteenDB
+databaseName = CanteenDB2Test
